--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-promise-router": "^4.1.1",
-    "mongoose": "^8.14.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.15.2"
-  }
+    "type": "module",
+    "scripts": {
+        "build": "tsc",
+        "start": "node --loader ts-node/esm index.ts",
+        "dev": "ts-node --esm index.ts"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "mongoose": "^8.14.0"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/node": "^22.15.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3"
+    }
 }
