--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "start": "node --loader ts-node/esm index.ts",
+        "start": "tsx index.ts",
         "dev": "ts-node --esm index.ts"
     },
     "dependencies": {
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
+        "joi": "^17.13.3",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.14.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.1",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.15.2",
         "ts-node": "^10.9.2",
+        "tsx": "^4.19.3",
         "typescript": "^5.8.3"
     }
 }
