--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
       "strict": true,
       "forceConsistentCasingInFileNames": true,
       "allowJs": true,
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "baseUrl": ".",
+      "paths": {
+        "*": ["node_modules/*"]
+      }
     },
     "ts-node": {
         "esm": true,
